# python-course

./: .env.example  .gitignore  README.md  pyproject.toml
connectors/: dou_form.py  email.py  email_2.py  gcal.py  resume_loader.py  resume_loader_1.py  vacancy_source.py
core/: logic.py  models.py
doc/: 00_interaction_rules.md  01_webinar_constraints.md  02_webinar_idea_and_topic.md  03_webinar_method_plan.md  04_data_acquisition_tasks.md  05_agent_hands_tasks.md  preflight_checklist.md  short-describe.md
helpers/: __init__.py  dou_helper.py
notebooks/: part2_agent_acts.ipynb
src/: math_operations.py  product_printer.py
